--- a/ThirdPartyLibraries/ThirdPartyLibraries.vcxproj.filters
+++ b/ThirdPartyLibraries/ThirdPartyLibraries.vcxproj.filters
@@ -18,10 +18,19 @@
     <ClCompile Include="Libraries\CRC32\crc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Libraries\CppFormat\format.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Libraries\CRC32\crc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Libraries\CppFormat\format.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Libraries\CppFormat\README.rst" />
   </ItemGroup>
 </Project>
