--- a/BaseLib/BaseLib.vcxproj.filters
+++ b/BaseLib/BaseLib.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="Src\Resources\BaseWindowsUtil.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Resources\ResourceUtil.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Util\Logger.cpp">
@@ -108,6 +111,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Src\Resources\BaseWindowsUtil.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Resources\ResourceUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
