Move ResourceContainer, ResourceRecency, and ResourceSources to BaseLib

--- a/BaseLib/BaseLib.vcxproj
+++ b/BaseLib/BaseLib.vcxproj
@@ -147,7 +147,11 @@
     <ClInclude Include="Src\Resources\BaseWindowsUtil.h" />
     <ClInclude Include="Src\Resources\PicCommandsCommon.h" />
     <ClInclude Include="Src\Resources\ResourceBlob.h" />
+    <ClInclude Include="Src\Resources\ResourceContainer.h" />
     <ClInclude Include="Src\Resources\ResourceLoader.h" />
+    <ClInclude Include="Src\Resources\ResourceRecency.h" />
+    <ClInclude Include="Src\Resources\ResourceSourceImpls.h" />
+    <ClInclude Include="Src\Resources\ResourceSources.h" />
     <ClInclude Include="Src\Resources\ResourceUtil.h" />
     <ClInclude Include="Src\Util\Codec.h" />
     <ClInclude Include="Src\Util\CodecAlt.h" />
@@ -168,7 +172,11 @@
     <ClCompile Include="Src\Resources\BaseWindowsUtil.cpp" />
     <ClCompile Include="Src\Resources\PicCommandsCommon.cpp" />
     <ClCompile Include="Src\Resources\ResourceBlob.cpp" />
+    <ClCompile Include="Src\Resources\ResourceContainer.cpp" />
     <ClCompile Include="Src\Resources\ResourceLoader.cpp" />
+    <ClCompile Include="Src\Resources\ResourceRecency.cpp" />
+    <ClCompile Include="Src\Resources\ResourceSourceImpls.cpp" />
+    <ClCompile Include="Src\Resources\ResourceTypes.cpp" />
     <ClCompile Include="Src\Resources\ResourceUtil.cpp" />
     <ClCompile Include="Src\Util\Codec.cpp" />
     <ClCompile Include="Src\Util\CodecAlt.cpp" />
