--- a/BaseLib/BaseLib.vcxproj.filters
+++ b/BaseLib/BaseLib.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="Src\Resources\Components\AudioNegative.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Audio\AudioProcessing.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Util\Logger.cpp">
@@ -171,6 +174,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Src\Resources\Components\AudioNegative.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Audio\AudioProcessing.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
