--- a/BaseLib/BaseLib.vcxproj
+++ b/BaseLib/BaseLib.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="Src\Util\Codec.h" />
     <ClInclude Include="Src\Util\CodecAlt.h" />
     <ClInclude Include="Src\Util\CompileLog.h" />
+    <ClInclude Include="Src\Util\DataBuffer.h" />
     <ClInclude Include="Src\Util\EnumFlags.h" />
     <ClInclude Include="Src\Util\Geometry.h" />
     <ClInclude Include="Src\Util\Iterators.h" />
@@ -171,6 +172,7 @@
     <ClInclude Include="Src\Util\PerfTimer.h" />
     <ClInclude Include="Src\Util\RunLogic.h" />
     <ClInclude Include="Src\Util\SciConstants.h" />
+    <ClInclude Include="Src\Util\ScopedValue.h" />
     <ClInclude Include="Src\Util\ScriptId.h" />
     <ClInclude Include="Src\Util\StlUtil.h" />
     <ClInclude Include="Src\Util\Stream.h" />
@@ -198,6 +200,7 @@
     <ClCompile Include="Src\Util\Codec.cpp" />
     <ClCompile Include="Src\Util\CodecAlt.cpp" />
     <ClCompile Include="Src\Util\CompileLog.cpp" />
+    <ClCompile Include="Src\Util\DataBuffer.cpp" />
     <ClCompile Include="Src\Util\Logger.cpp" />
     <ClCompile Include="Src\Util\PerfTimer.cpp" />
     <ClCompile Include="Src\Util\RunLogic.cpp" />
